k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pulse-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: pulse

  template:
    metadata:
      labels:
        app: pulse

    spec:
      containers:
      - name: pulse
        image: saishankarreddy/pulse:latest

        ports:
        - containerPort: 8000
