k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pulse-service

spec:
  selector:
    app: pulse

  ports:
  - port: 80
    targetPort: 8000

  type: NodePort
