k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pulse-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: pulse.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: pulse-service

            port:
              number: 80
